--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   http: ^1.5.0
   url_launcher: ^6.3.2
   new_version_plus: ^0.1.1
+  dio: ^5.9.0
+  path_provider: ^2.1.5
+  open_filex: ^4.7.0
 
 dev_dependencies:
   flutter_test:
