--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -37,6 +37,9 @@ jobs:
           path: |
             build/app/outputs/flutter-apk/app-release.apk
             build/app/outputs/bundle/release/app-release.aab
+          if-no-files-found: error
+          overwrite: true
+          retention-days: 7
 
   release:
     needs: build
@@ -54,8 +57,8 @@ jobs:
 
       - name: Rename artifacts for release
         run: |
-          mv artifacts/app-release.apk artifacts/offlinebingo-${{ github.ref_name }}.apk
-          mv artifacts/app-release.aab artifacts/offlinebingo-${{ github.ref_name }}.aab
+          mv artifacts/build/app/outputs/flutter-apk/app-release.apk artifacts/offlinebingo-${{ github.ref_name }}.apk
+          mv artifacts/build/app/outputs/bundle/release/app-release.aab artifacts/offlinebingo-${{ github.ref_name }}.aab
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
