--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -42,29 +42,29 @@ jobs:
           retention-days: 7
 
   release:
-    needs: build
-    runs-on: ubuntu-latest
+  needs: build
+  runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+  steps:
+    - name: Checkout
+      uses: actions/checkout@v4
 
-      - name: Download Build Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: offlinebingo-builds
-          path: artifacts
+    - name: Download Build Artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: offlinebingo-builds
+        path: artifacts
 
-      - name: Rename artifacts for release
-        run: |
-          mv artifacts/build/app/outputs/flutter-apk/app-release.apk artifacts/offlinebingo-${{ github.ref_name }}.apk
-          mv artifacts/build/app/outputs/bundle/release/app-release.aab artifacts/offlinebingo-${{ github.ref_name }}.aab
+    - name: Rename artifacts for release
+      run: |
+        mv artifacts/app-release.apk artifacts/offlinebingo-${{ github.ref_name }}.apk
+        mv artifacts/app-release.aab artifacts/offlinebingo-${{ github.ref_name }}.aab
 
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            artifacts/offlinebingo-${{ github.ref_name }}.apk
-            artifacts/offlinebingo-${{ github.ref_name }}.aab
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Create GitHub Release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: |
+          artifacts/offlinebingo-${{ github.ref_name }}.apk
+          artifacts/offlinebingo-${{ github.ref_name }}.aab
+      env: 
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
