--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -3,8 +3,7 @@ name: Flutter Build & Release
 on:
   push:
     tags:
-      - 'v*'   # Trigger on version tags
-
+      - 'v*'   # Runs only when you push a tag like v1.0.0, v1.2.3
 permissions:
   contents: write   # Needed for GitHub Release
 
@@ -13,58 +12,55 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Checkout repository
       - name: Checkout
         uses: actions/checkout@v4
 
+      # Setup Flutter
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.35.2'
+          # flutter-version: '3.22.0'  # use your Flutter version
+          flutter-version: '3.35.2'  # Updated to support Dart 3.8.1
 
+      # Install dependencies
       - name: Install dependencies
         run: flutter pub get
 
+      # Build Android APK
       - name: Build APK
         run: flutter build apk --release
 
+      # Build Android App Bundle (for Play Store)
       - name: Build AAB
         run: flutter build appbundle --release
 
+      # Upload artifacts (so you can download from Actions tab)
       - name: Upload APK & AAB
         uses: actions/upload-artifact@v4
         with:
-          name: offlinebingo-builds
+          name: yeneBingoMobile-builds
           path: |
             build/app/outputs/flutter-apk/app-release.apk
             build/app/outputs/bundle/release/app-release.aab
-          if-no-files-found: error
-          overwrite: true
-          retention-days: 7
-
   release:
-  needs: build
-  runs-on: ubuntu-latest
+    needs: build
+    runs-on: ubuntu-latest
 
-  steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Download Build Artifacts
-      uses: actions/download-artifact@v4
-      with:
-        name: offlinebingo-builds
-        path: artifacts
+      - name: Download Build Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: yeneBingoMobile-builds
 
-    - name: Rename artifacts for release
-      run: |
-        mv artifacts/app-release.apk artifacts/offlinebingo-${{ github.ref_name }}.apk
-        mv artifacts/app-release.aab artifacts/offlinebingo-${{ github.ref_name }}.aab
-
-    - name: Create GitHub Release
-      uses: softprops/action-gh-release@v1
-      with:
-        files: |
-          artifacts/offlinebingo-${{ github.ref_name }}.apk
-          artifacts/offlinebingo-${{ github.ref_name }}.aab
-      env: 
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            yeneBingoMobile-builds/app-release.apk#yeneBingo-${{ github.ref_name }}.apk
+            yeneBingoMobile-builds/app-release.aab#yeneBingo-${{ github.ref_name }}.aab
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
